// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EqualsIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EqualsIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M3 5v2h10V5H3zm0 6h10V9H3v2z"
  />
</Icon>
`;

exports[`EqualsIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EqualsIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M3 5v2h10V5H3zm0 6h10V9H3v2z"
  />
</Icon>
`;

exports[`EqualsIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EqualsIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M3 5v2h10V5H3zm0 6h10V9H3v2z"
  />
</Icon>
`;
